# Gut-Instincts

./: .gitignore  README.md  inference_results.json  pyproject.toml  requirements.txt  ruff.toml  validation.py
Gut-Instincts_GutBrainIE_2025/: Gut-Instincts_T61_BioLinkBERT-base_p1.5g1.5s1b0.75.json  combined_ner_and_test_data.json
bash_scripts/: run.sh  run_BERTLSTMCRF.sh  run_BERTLSTMCRF_more.sh  run_BioLinkBERT-base-weighted.sh  run_BioLinkBERT-base.sh  run_BioMedRoBERTa.sh  run_all_models.sh  run_all_weighted.sh  run_all_weighted_with_html.sh  run_array_job.sh  run_bio_html.sh  run_bob.sh  run_bob2.sh  run_ensemble_models.sh  run_lr_test.sh  run_model.sh  run_model_concatenated_data.sh  run_model_freeze-8-epochs-out-of-16-epochs.sh  run_model_x_amount_freeze-32-epochs.sh  run_models.sh  run_pipelines.sh  run_pipelines_temp.sh  run_re_test.sh  run_several_models.sh  run_single.sh  run_test.sh  submit_array.sh  test_script.sh
combined_data/: combined_ner_and_test_data.json  combined_ner_and_test_data_12.json  combined_ner_and_test_data_5.json
data_inference_results/: 61_huggingface_BioLinkBERT-base_p1.25g1.25s1b0.25_no_html.json  61_huggingface_BioLinkBERT-base_p1.25g1.25s1b0.75_no_html.json  BERTLSTMCRF_more.json  BioLinkBERT-base.json  BioLinkBERT-base_no_html.json  ensemble_inference.json  ensemble_logits.json  inference_ensemble_test.json  kkk.json  kkk_matched_with_dev.json  ner-biolink.json  ner-scibert.json  ner.json  ner1.json
data_inference_results_6.2.3_evaluated_on_dev/: 623_re_BioLinkBERT-base_p1.25g1.25s1b0.75_Truerro_10nsm_seed2.json  623_re_BioLinkBERT-base_pgs_Truerro_10nsm_seed2.json
data_preprocessed/: dev_html_removed.json  gold_html_removed.json  platinum_html_removed.json  re_inference_results.json  training_concatenated.pkl  validation.pkl  validation_concatenated.pkl
inference_configs/: _template_ner_ensemble_inference.yaml  _template_re_relation_ensemble_inference.yaml  ensemble1.yaml  nine_models.yaml  token_and_entity.yaml
src/: inference.py  main.py  text_classification.py  token_classification.py
submissions/: Gut-Instincts_T621_BioLinkBERT-base_pg.json
tests/: test_compute_metrics.py  test_remove_html.py  test_tokenization.py
training_configs/: 1,25-1,25-1,25-0,75_html.yaml  BERTLSTMCRF.yaml  BERTLSTMCRF_more.yaml  BioLinkBERT-base-last_epoch.yaml  BioLinkBERT-base-weighted.yaml  BioLinkBERT-base.yaml  BioLinkBERT-large.yaml  BioLinkBert-base.yaml  BioLinkBert-large-freeze-16-epochs-out-of-32-epochs.yaml  BioLinkBert-large-freeze-20-epochs-out-of-32-epochs.yaml  BioLinkBert-large-freeze-24-epochs-out-of-32-epochs.yaml  BioLinkBert-large-freeze-8-epochs-out-of-16-epochs.yaml  BioLinkBert-large.yaml  BioLinkBert-large_concatenated_data.yaml  (+13 more)
(+6818 files in other folders)
