[project]
name = "Gut-Instincts"
readme = "README.md"
version = "0.0.0"
requires-python = ">= 3.11.9"
dependencies = [
    "pytest==8.3.5",
    "ruff==0.9.6",
    "python-dotenv==1.0.1",
    "mlflow==2.21.2",
    "transformers==4.49.0",
    "datasets==3.4.1",
    "evaluate==0.4.3",
    "seqeval==1.2.2",
    "accelerate==1.5.2",
    "tiktoken==0.9.0",
    "sentencepiece==0.2.0",
    "torch==2.6.0",
    "pytorch-crf==0.7.2",
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "streamlit==1.45.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
